@startuml
hide empty members
skinparam monochrome true
skinparam backgroundcolor transparent

abstract class Entity {
}

Entity <|-- IdentifiableEntity

abstract class IdentifiableEntity {
    Id: Guid
}

IdentifiableEntity <|-- Species

abstract class Species {
    DateOfBirth: DateOfBirth
    Gender: Gender?
    DateOfDeath: DateOfDeath
    Age: UInt32?
    IsAlive: Boolean
}

Species <|-- Person

class Person {
    FirstName: FirstName
    LastName: LastName
    Handedness: Handedness?
    BloodGroup: BloodGroup?
    HairColor: WellKnownHairColor?
    Religion: MajorReligion?
    Profession: WellKnownProfession?
    DriverLicense: EuropeanDriverLicense?
    AverageHeight: Centimeter
    AverageWeight: Kilogram
    Phone: Phone
    Homepage: Homepage
    EMailAddress: EMailAddress
    BMI: Double?
}

@enduml
